기능추가 : 채팅, 이벤트, 알림, 멤버관리, 배포설정